# BH_Documentation_POC

./: .replit  ClinicalOpiateWithdrawalScale.docx  PRAPARE-English.docx  Pasted-BH-Agentive-Clinical-Documentation-POC-Business-Requirements-Overview-Problem-to-be-Solved-C-1730377230128.txt  Pasted-Behavioral-Health-Industry-Using-Living-Systems-Theory-The-behavioral-health-industry-is-a-complex--1730377119588.txt  Pasted-TemplateSyntaxError-jinja2-exceptions-TemplateSyntaxError-expected-token-got-for-Traceba-1731515375943.txt  app.py  create_admin.py  create_test_user.py  import_icd10_codes.py  init_assessment_tools.py  init_db.py  init_prapare_assessment.py  migrations.py  models.py  patient.profile.json  pyproject.toml  replit.md  replit.nix  reset_db.py  update_admin_users.py
migrations/versions/: 099bf1f0018d_fix_email_unique_constraint.py  1c58128576da_add_patientidentifier_model.py  623f1adba55d_add_assessment_questionnaire_system_.py  68b56b009282_add_role_field_to_user_model.py  8680d69adbc2_add_document_reference_to_assessment_.py  ae1009027bf8_add_before_value_and_after_value_to_.py  bad30b5187a1_add_condition_model.py  bc135446f9b8_add_fhir_patient_model.py
routes/: admin.py  audio.py  auth.py  conditions.py  documentation.py  documents.py  main.py  patients.py  search.py
static/css/: htql-suggestions.css
static/js/: audio.js  htql-suggestions.js
templates/: base.html  dashboard.html  index.html
templates/admin/: audit_logs.html  dashboard.html
templates/auth/: register.html
utils/: ai_analysis.py  audit.py  cows_config.py  search.py
(+26 files in other folders)
